--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,5 +3,5 @@ bin_PROGRAMS		=	ckeyboard
 
 ckeyboard_SOURCES	=	main.c
 
-ckeyboard_CFLAGS	=	$(GTK3_CFLAGS)
-ckeyboard_LDADD		=	$(GTK3_LIBS)
+ckeyboard_CFLAGS	=	$(GTK3_CFLAGS) $(XDO_FLAGS)
+ckeyboard_LDADD		=	$(GTK3_LIBS) $(XDO_LIBS)
