--- a/configure.ac
+++ b/configure.ac
@@ -9,13 +9,13 @@ AC_CONFIG_FILES([Makefile src/Makefile])
 AM_INIT_AUTOMAKE
 
 # Checks for programs.
-CFLAGS=" -std=gnu11 -ggdb -Wall -Werror"
+CFLAGS=" -std=gnu11 -ggdb -Wall"
 AC_PROG_CC
 
 # Checks for libraries.
 
 # Checks for header files.
-AC_CHECK_HEADERS([fcntl.h string.h unistd.h])
+AC_CHECK_HEADERS([xdo.h fcntl.h string.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SSIZE_T
@@ -26,10 +26,6 @@ AC_CHECK_FUNCS([memset])
 
 PKG_CHECK_MODULES([GTK3], [gtk+-3.0])
 
-# TODO check xdo here
-XDO_CFLAGS=
-XDO_LIBS=-lxdo
-AC_SUBST([XDO_CFLAGS], [])
-AC_SUBST([XDO_LIBS],[$XDO_LIBS])
+AC_CHECK_LIB([xdo], [xdo_new])
 
 AC_OUTPUT
