--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,9 @@
 
 bin_PROGRAMS	=	edpad
 
-edpad_SOURCES	=	main.c
+edpad_SOURCES	=	edpad.c	\
+					edpad.h
 
-edpad_CFLAGS	=	$(GTK3_CFLAGS) $(XDO_CFLAGS)
-edpad_LDADD		=	$(GTK3_LIBS) $(XDO_LIBS)
+edpad_CFLAGS	=	$(GTK3_CFLAGS) $(GME2_CFLAGS)
+edpad_LDADD		=	$(GTK3_LIBS) $(GME2_LIBS)
+
