--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,13 @@
 
 bin_PROGRAMS	=	edpad
 
-edpad_SOURCES	=	edpad.c	\
-					edpad.h
+edpad_SOURCES	=	edpad.h			\
+					edpad.c			\
+					bottom.c		\
+					buttons.c		 \
+					tabs.c			\
+					xkeys.h			\
+					xkeys.c
 
 edpad_CFLAGS	=	$(GTK3_CFLAGS) $(GME2_CFLAGS)
 edpad_LDADD		=	$(GTK3_LIBS) $(GME2_LIBS)
