--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,12 +2,7 @@
 bin_PROGRAMS	=	edpad
 
 edpad_SOURCES	=	edpad.h			\
-					edpad.c			\
-					bottom.c		\
-					buttons.c		 \
-					tabs.c			\
-					xkeys.h			\
-					xkeys.c
+					edpad.c			
 
 edpad_CFLAGS	=	$(GTK3_CFLAGS) $(GME2_CFLAGS)
 edpad_LDADD		=	$(GTK3_LIBS) $(GME2_LIBS)
