--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ AC_PREFIX_DEFAULT([$HOME/.local])
 AC_SUBST([HOME], [$HOME])
 AC_SUBST([SHAREDIR], [$HOME/.local/share/edpad])
 AC_CONFIG_FILES([Makefile])
-AC_CONFIG_FILES([edpad.css])
+AC_CONFIG_FILES([resources/edpad.css])
 
 AC_OUTPUT
 
