--- a/resources/edpad.css.in
+++ b/resources/edpad.css.in
@@ -2,43 +2,16 @@
     background-image: url('@SHAREDIR@/edpad.png');
 }
 
-#scroll1 {
-    background: alpha (@base_color, 0.0);
-}
-
-#scroll2 {
-    background: alpha (@base_color, 0.0);
-}
-
-#scroll3 {
-    background: alpha (@base_color, 0.0);
-}
-
-
-#view1 {
-    font-size: 20px;
-    background: alpha (@base_color, 0.0);
-}
-#view1 text {
-    color: #AAAA50;
-    background: alpha (@base_color, 0.0);
-}
-
-#view2 {
+#view {
     font-size: 22px;
     background: alpha (@base_color, 0.0);
 }
-#view2 text {
+#view text {
     color: #50FF50;
     background: alpha (@base_color, 0.0);
 }
 
-#view3 {
-    font-size: 20px;
-    background: alpha (@base_color, 0.0);
-}
-#view3 text {
-    color: #4040FF;
+* {
     background: alpha (@base_color, 0.0);
 }
 
