--- a/Makefile.in
+++ b/Makefile.in
@@ -12,6 +12,8 @@ install:
 	go env -w GOBIN=${GOBIN}
 	go install
 	mkdir -p ${SHAREDIR}
-	cp -f resources/edpad.css resources/edpad.glade ${SHAREDIR}
+	./configure
+	cp -f resources/edpad.css ${SHAREDIR}
+	cp -f resources/edpad.glade ${SHAREDIR}
 	cp -f resources/edpad-1280-800.png ${SHAREDIR}/edpad.png
 
